[gd_scene load_steps=16 format=3 uid="uid://0k7pq40ywdlm"]

[ext_resource type="Script" path="res://global/AudioManager.gd" id="1_c734y"]
[ext_resource type="AudioStream" uid="uid://cw3kq3cx7bf7n" path="res://audio/bgm/DungeonManTheme.mp3" id="2_grmv0"]
[ext_resource type="AudioStream" uid="uid://crx8vphn0ky8g" path="res://audio/sfx/WalkingSound.mp3" id="3_xdbkq"]
[ext_resource type="AudioStream" uid="uid://c3v33bqdos6fq" path="res://audio/sfx/click1.ogg" id="4_ichr7"]
[ext_resource type="AudioStream" uid="uid://dj1vmeai5cjbt" path="res://audio/sfx/rollover1.ogg" id="5_6c467"]
[ext_resource type="AudioStream" uid="uid://bv4p8ewoe17ro" path="res://audio/sfx/PotBreakingSound.mp3" id="6_q0mh7"]
[ext_resource type="AudioStream" uid="uid://bnqmd4vdkn8cl" path="res://audio/sfx/RadarPingSFX.wav" id="7_8x44s"]
[ext_resource type="AudioStream" uid="uid://4lve3532unc4" path="res://audio/sfx/CoinCollectSFX.wav" id="7_grhkn"]
[ext_resource type="AudioStream" uid="uid://cqyew4ps5rhqu" path="res://audio/sfx/RockBreakingSFX.wav" id="7_ko14c"]
[ext_resource type="AudioStream" uid="uid://bt0oaftfgwera" path="res://audio/sfx/BatteryPowerupSFX.mp3" id="9_lgbr1"]
[ext_resource type="AudioStream" uid="uid://bved02eer1602" path="res://audio/sfx/BatteryCollectSFX.mp3" id="10_e7sl2"]
[ext_resource type="AudioStream" uid="uid://csdgft04xe5bu" path="res://audio/sfx/DoorOpenSFX.wav" id="11_66s0p"]
[ext_resource type="AudioStream" uid="uid://c85jjpm7j870h" path="res://audio/sfx/DeathSFX.mp3" id="12_b533r"]
[ext_resource type="AudioStream" uid="uid://p7ger8hbgnj" path="res://audio/sfx/GameOverSFX.wav" id="14_g8bbb"]
[ext_resource type="AudioStream" uid="uid://dhtqrliktil8q" path="res://audio/sfx/PopupSFX.wav" id="15_fhoi1"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_c734y")

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_grmv0")
volume_db = -8.0
autoplay = true
bus = &"Music"

[node name="WalkingSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_xdbkq")
volume_db = -6.0
pitch_scale = 1.2
bus = &"SFX"

[node name="ClickSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ichr7")
volume_db = 4.0
bus = &"SFX"

[node name="RolloverSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_6c467")
volume_db = 2.0
pitch_scale = 1.25
bus = &"SFX"

[node name="PotBreakingSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_q0mh7")
volume_db = -8.0
bus = &"SFX"

[node name="RockBreakingSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ko14c")

[node name="CoinCollectSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_grhkn")
bus = &"SFX"

[node name="CoinCounterSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_grhkn")
bus = &"SFX"

[node name="RadarPingSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_8x44s")
volume_db = 5.0
bus = &"SFX"

[node name="BatteryPowerupSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_lgbr1")
volume_db = -2.0
bus = &"SFX"

[node name="BatteryCollectSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_e7sl2")
bus = &"SFX"

[node name="DoorOpenSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_66s0p")
volume_db = 9.0
bus = &"SFX"

[node name="DeathSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_b533r")
pitch_scale = 0.9
bus = &"SFX"

[node name="GameOverSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_g8bbb")
volume_db = -2.0
bus = &"SFX"

[node name="PopupSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_fhoi1")
volume_db = -4.0
bus = &"SFX"
